fix scroll pages and add header move actions

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     </div>
   </header>
   <section class="fullScreen forest">
+    <div class="fullScreen__overlay"></div>
   </section>
   <div class="scroll-prompt">
     <button>scroll down to see more</button>
@@ -46,6 +47,7 @@
         </blockquote>
       </figcaption>
     </figure>
+    <div class="fullScreen__overlay"></div>
   </section>
   <div class="scroll-prompt scroll-prompt_gray">
     <button>scroll down to see more</button>
@@ -71,9 +73,10 @@
         </blockquote>
       </figcaption>
       <div class="img-wrapper">
-        <img src="./img/man.jpg" alt="">
+        <img src="./img/forest.jpg" alt="">
       </div>
     </figure>
+    <div class="fullScreen__overlay"></div>
   </section>
   <script src="./js/main.js"></script>
 </body>
