change state management and add menu state

--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,10 @@
   <header>
     <div class="container">
       <nav class="mainMenu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About me</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" data-id="0">Home</a></li>
+        <li><a href="#" data-id="1">About me</a></li>
+        <li><a href="#" data-id="2">Portfolio</a></li>
+        <li><a href="#" data-id="3">Contacts</a></li>
       </nav>
     </div>
   </header>
@@ -75,6 +75,31 @@
       <div class="img-wrapper">
         <img src="./img/forest.jpg" alt="">
       </div>
+    </figure>
+    <div class="fullScreen__overlay"></div>
+  </section>
+  <div class="scroll-prompt scroll-prompt_gray">
+    <button>scroll down to see more</button>
+  </div>
+  <section class="fullScreen about">
+    <figure>
+      <figcaption>
+        <h2>CONTACTS</h2>
+        <blockquote>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
+            blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
+          </p>
+          <p>
+            Ipsa in soluta blanditiis dolorem quo obcaecati.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <p>
+            Ipsa in soluta blanditiis dolorem quo obcaecati.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </blockquote>
+      </figcaption>
     </figure>
     <div class="fullScreen__overlay"></div>
   </section>
