add mobile menu and other stuff

--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Middle</title>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
   <header>
     <div class="container">
+      <button class="toggleMenu">
+        <u>8</u>
+        MENU
+      </button>
       <nav class="mainMenu">
         <li><a href="#" data-id="0">Home</a></li>
         <li><a href="#" data-id="1">About me</a></li>
@@ -23,86 +27,88 @@
   <div class="scroll-prompt">
     <button>scroll down to see more</button>
   </div>
-  <section class="fullScreen about">
-    <figure>
-      <div class="img-wrapper">
-        <img src="./img/man.jpg" alt="">
-      </div>
-      <figcaption>
-        <h2>About me</h2>
-        <blockquote>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
-            blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <cite>Jason Wood</cite>
-        </blockquote>
-      </figcaption>
-    </figure>
-    <div class="fullScreen__overlay"></div>
-  </section>
-  <div class="scroll-prompt scroll-prompt_gray">
-    <button>scroll down to see more</button>
-  </div>
-  <section class="fullScreen about">
-    <figure>
-      <figcaption>
-        <h2>PORTFOLIO</h2>
-        <blockquote>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
-            blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <cite>Jason Wood</cite>
-        </blockquote>
-      </figcaption>
-      <div class="img-wrapper">
-        <img src="./img/forest.jpg" alt="">
-      </div>
-    </figure>
-    <div class="fullScreen__overlay"></div>
-  </section>
-  <div class="scroll-prompt scroll-prompt_gray">
-    <button>scroll down to see more</button>
-  </div>
-  <section class="fullScreen about">
-    <figure>
-      <figcaption>
-        <h2>CONTACTS</h2>
-        <blockquote>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
-            blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <p>
-            Ipsa in soluta blanditiis dolorem quo obcaecati.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-        </blockquote>
-      </figcaption>
-    </figure>
-    <div class="fullScreen__overlay"></div>
-  </section>
+  <main>
+    <section class="fullScreen about">
+      <figure>
+        <div class="img-wrapper">
+          <img src="./img/man.jpg" alt="">
+        </div>
+        <figcaption>
+          <h2>About me</h2>
+          <blockquote>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
+              blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <cite>Jason Wood</cite>
+          </blockquote>
+        </figcaption>
+      </figure>
+      <div class="fullScreen__overlay"></div>
+    </section>
+    <div class="scroll-prompt scroll-prompt_gray">
+      <button>scroll down to see more</button>
+    </div>
+    <section class="fullScreen portfolio">
+      <figure>
+        <figcaption>
+          <h2>PORTFOLIO</h2>
+          <blockquote>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
+              blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <cite>Jason Wood</cite>
+          </blockquote>
+        </figcaption>
+        <div class="img-wrapper">
+          <img src="./img/forest.jpg" alt="">
+        </div>
+      </figure>
+      <div class="fullScreen__overlay"></div>
+    </section>
+    <div class="scroll-prompt scroll-prompt_gray">
+      <button>scroll down to see more</button>
+    </div>
+    <section class="fullScreen contacts">
+      <figure>
+        <figcaption>
+          <h2>CONTACTS</h2>
+          <blockquote>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta hic facilis eligendi,
+              blanditiis cumque libero aliquam ipsam rem quas possimus molestiae cupiditate repudiandae?
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <p>
+              Ipsa in soluta blanditiis dolorem quo obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </blockquote>
+        </figcaption>
+      </figure>
+      <div class="fullScreen__overlay"></div>
+    </section>
+  </main>
   <script src="./js/main.js"></script>
 </body>
 </html>
